# red_diamond

./: CMakeLists.txt  README.md
include/: lz4.h
src/: CMakeLists.txt  Makefile  README.md  red_diamond.h  red_diamond_main.c  red_diamond_vds.c
